--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="js/index.js" defer></script>
   </head>
   <body>
-    <canvas id="weather" width="128" height="128"></canvas>
-
+    <section id="my-weather">
+      <canvas id="weather-icon" width="128" height="128"></canvas>
+      <h3 id="current-weather"><h3>
+    </section>
   </body>
 </html>
