--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta name="msapplication-config" content="images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js" async></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js" async></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js" async></script>
     <script src="js/index.js" defer></script>
   </head>
   <body>
-    <img src="images/croissando.png" id="croissando" alt="croissandwich with googly eyes"/>
+    <h1>SANDO CLUB</h1>
+    <img src="images/croissando.png" id="sando" alt="croissandwich with googly eyes"/>
   </body>
 </html>
