--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <script src="js/index.js" defer></script>
   </head>
   <body>
-    <h1>SANDO CLUB</h1>
-    <img src="images/croissando.png" id="sando" alt="croissandwich with googly eyes"/>
+    <main>
+      <header>
+        <h1 id="title">SANDO CLUB</h1>
+      </header>
+      <!-- <img src="images/croissando.png" id="sando" alt="croissandwich with googly eyes"/> -->
+    </main>
   </body>
 </html>
