--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
   </head>
   <body>
     <main>
-      <header>
-        <h1 id="title">SANDO CLUB</h1>
-      </header>
-      <!-- <img src="images/croissando.png" id="sando" alt="croissandwich with googly eyes"/> -->
+      <img src="images/croissando.png" id="sando" alt="croissandwich with googly eyes"/>
+      <h1 id="title"><a href="http://sandwich-club.org/2017-sandwich-club-summit/">SANDO CLUB</a></h1>
+      <img src="images/pickle.png" id="pickle" alt="spinning pickle"/>
     </main>
   </body>
 </html>
