--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js" async defer></script>
-    <script src="js/index.js" defer></script>
+    <script src="js/index.js" async defer></script>
   </head>
   <body>
     <main>
