change title and font size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <main>
       <img src="images/croissando.png" id="sando" alt="croissandwich with googly eyes"/>
-      <h1 id="title"><a href="http://sandwich-club.org/2017-sandwich-club-summit/">SANDO CLUB</a></h1>
+      <h1 id="title"><a href="http://sandwich-club.org/2017-sandwich-club-summit/">LET'S DO LUNCH!</a></h1>
       <img src="images/pickle.png" id="pickle" alt="spinning pickle"/>
     </main>
   </body>
