layout using grid

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
   </head>
   <body>
     <main>
-      <img src="images/croissando.png" id="sando" alt="croissandwich with googly eyes"/>
-      <h1 id="title"><a href="http://sandwich-club.org/2017-sandwich-club-summit/">LET'S DO LUNCH!</a></h1>
-      <img src="images/pickle.png" id="pickle" alt="spinning pickle"/>
+      <div class="logo">
+        <img src="images/croissando.png" id="club-logo" alt="croissandwich with googly eyes"/>
+      </div>
+      <div class="tagline">
+        <h1 id="club-tagline"><a href="http://sandwich-club.org/2017-sandwich-club-summit/">LET'S DO LUNCH!</a></h1>
+      </div>
+      <div class="mascot">
+        <img src="images/pickle.png" id="mascot" alt="sliding pickle"/>
+      </div>
     </main>
   </body>
 </html>
